server/compilers/goLiteJS/src/test/ml2/valid/type2.go
// aliasing basic types
package main

type num int
type double float64
type boolean bool
type char rune

var n num = num(23)
var x double = double(23.0)
var p boolean = boolean(true)
var a char = char('a')
