server/compilers/goLiteJS/src/test/ml2/invalid/cast4.go
// casting undeclared type
package main

var int n = 23
var s char = char(n)
